# spey-hs3

./: .pre-commit-config.yaml  .zenodo.json  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: check+build+deploy.yaml  tests.yml
src/spey_hs3/: __init__.py  _version.py  helper_functions.py
tests/: conftest.py  test_hs3interface.py  test_workspace_interpreter.py
